# skill-shelf

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.screenshot.yml  docker-compose.yml
.claude/: launch.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_access_controls.py  0002_multi_capability_plugins.py  0003_organizations_and_auth_providers.py  0006_setup_state_and_local_accounts.py  0007_rename_legacy_tables.py  0008_marketplace_user_link.py  0009_auth_provider_client_secret.py  0010_marketplace_creator_role.py  0011_rename_marketplace_roles.py  0012_encrypt_client_secrets.py
backend/app/: __main__.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/lib/: auth.py  git_store.py  local_accounts.py  locks.py  marketplace_json.py  oidc_discovery.py  provider_allowlist.py  secret_box.py  session.py  setup_state.py  slug.py  write_path.py
backend/app/routes/: api_access.py  api_marketplaces.py  api_plugins.py  api_setup.py  api_skills.py  auth_login.py  git_smart_http.py  marketplace_public.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_config.py  test_git_store.py  test_marketplace_json.py  test_plugin_rendering.py  test_slug.py
docs/: DEPLOYMENT.md  DEVELOPMENT.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: seed_screenshot_data.py  spike_dulwich.py  spike_fastapi_dulwich.py  verify.py
(+28 files in other folders)
